--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1> Odin Recipes</h1>
-
+            <a href="eggfriedrice.html">Egg Fried Rice Recipe</a>
 
 
 
