--- a/recipes/eggfriedrice.html
+++ b/recipes/eggfriedrice.html
@@ -8,9 +8,10 @@
 
 
     </head>
+    
     <body>
         <h1>Egg Fried Rice</h1>
-            <img src="eggfriedrice.jpeg" alt="egg fried rice">
+            <img src="../images/eggfriedcrice.jpeg"alt="egg fried rice">
 
 
 
