Changes to site
added description,ingredients, cooking steps

--- a/recipes/eggfriedrice.html
+++ b/recipes/eggfriedrice.html
@@ -12,14 +12,34 @@
     <body>
         <h1>Egg Fried Rice</h1>
             <img src="../images/eggfriedcrice.jpeg"alt="egg fried rice">
+            <h2>Description</h2>
+            <p>This family-friendly dinner comes together quickly on a busy weeknight, all in one skillet. As the eggs cook atop the rice, the rice forms an irresistible crispy layer on the bottom. Starting with purchased matchstick-cut carrots cuts down on prep work, and the slender pieces cook much more quickly than chopped carrots.</p>
+            
+            <h3>Ingredients</h3>
+            <ul> 
+                <li>1 cup water</li>
+                <li>½ teaspoon salt</li>
+                <li>2 tablespoons soy sauce</li>
+                <li>1 cup uncooked instant rice</li>
+                <li>1 teaspoon vegetable oil</li>
+                <li>½ onion, finely chopped</li>
+                <li>½ cup green beans</li>
+                <li>1 egg, lightly beaten</li>
+                <li>¼ teaspoon ground black pepper</li>
+
+                 <h4>Steps</h4>
+                    <ol>
+                         <li>n a saucepan bring water, salt and soy sauce to a boil. Add rice and stir. Remove from heat, cover and let stand 5 minutes.</li>                        </li>
+                        <li>Heat oil in a medium skillet or wok over medium heat. Saute onions and green beans for 2 to 3 minutes. Pour in egg and fry for 2 minutes, scrambling egg while it cooks.</li>
+                        <li>Stir in the cooked rice, mix well and sprinkle with pepper.</li>
 
 
+                    </ol>
 
 
+            </ul>
 
     </body>
-
-
 
 
 
