Added details for recipes
Added description,ingredients,directions

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <h1> Odin Recipes</h1>
-            <a href="eggfriedrice.html">Egg Fried Rice Recipe</a>
-
+            <a href="recipes/eggfriedrice.html">Egg Fried Rice Recipe</a>
+            <a href="recipes/fishtaco.html">Fish Tacos</a>
 
 
 
