--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     </head>
     <body>
         <h1> Odin Recipes</h1>
-            <a href="recipes/eggfriedrice.html">Egg Fried Rice Recipe</a>
-            <a href="recipes/fishtaco.html">Fish Tacos</a>
+        <ul>
+        <li><a href="recipes/eggfriedrice.html">Egg Fried Rice Recipe</a></li>
+        <li><a href="recipes/fishtaco.html">Fish Tacos</a></li>
+        <li><a href="recipes/ramensoup.html"></a></li>
 
-
-
+        </ul>
 
 
     </body>
